# rtml-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
env/: pyvenv.cfg
files/: perfect_file.txt  ramayana.txt
src/: index.py  main.py
