[tool.poetry]
name = "rtml-server"
version = "0.1.0"
description = "Server deployment of RTML."
authors = ["DeadUnderscoreMeme <deadunderscorememe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
